--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest --ForceExit",
     "start": "node index.js"
   },
   "jest": {
